# radar_data_classifier

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  solution.odt  utils.py
inputs/: Ground_Truth_001.xlsx  Observations_001.xlsx  Observations_011.xlsx  Observations_012.xlsx
