[project]
name = "radar-data-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.19.0",
    "geopy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "polars>=1.39.0",
    "scikit-learn>=1.8.0",
]
